--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
       <div class="panel"></div>
       <div class="spacer"></div>
       <div class="icons">
-        <div class="icon-cell"><img src="bear-head.png" alt="Bear" /></div>
-        <div class="icon-cell"><img src="frog.png" alt="Frog" /></div>
-        <div class="icon-cell"><img src="jellyfish.png" alt="Jellyfish" /></div>
-        <div class="icon-cell"><img src="pig.png" alt="Pig" /></div>
-        <div class="icon-cell"><img src="rat.png" alt="Rat" /></div>
-        <div class="icon-cell"><img src="raven.png" alt="Raven" /></div>
-        <div class="icon-cell"><img src="snail.png" alt="Snail" /></div>
-        <div class="icon-cell"><img src="tortoise.png" alt="Tortoise" /></div>
+        <div class="icon-cell"><img src="animals/bear-head.png" alt="Bear" /></div>
+        <div class="icon-cell"><img src="animals/frog.png" alt="Frog" /></div>
+        <div class="icon-cell"><img src="animals/jellyfish.png" alt="Jellyfish" /></div>
+        <div class="icon-cell"><img src="animals/pig.png" alt="Pig" /></div>
+        <div class="icon-cell"><img src="animals/rat.png" alt="Rat" /></div>
+        <div class="icon-cell"><img src="animals/raven.png" alt="Raven" /></div>
+        <div class="icon-cell"><img src="animals/snail.png" alt="Snail" /></div>
+        <div class="icon-cell"><img src="animals/tortoise.png" alt="Tortoise" /></div>
       </div>
       <div class="character-wrap">
-        <img src="flower.jpg" alt="Character" />
+        <img src="New Folder/flower.jpg" alt="Character" />
       </div>
     </div>
   </body>
