--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <div class="side-cell"></div>
           </div>
           <div class="character-frame">
-            <img src="New Folder/flower.jpg" alt="Character" />
+            <img src="New Folder/cross.jpg" alt="Character" />
           </div>
           <div class="side-column">
             <div class="side-cell"></div>
@@ -170,3 +170,4 @@
     </div>
   </body>
 </html>
+
